# hotpresidents.com

./: Cargo.toml  README.md  index_load.yaml
css/: main.css  mobile.css
js/: index.js
src/: .config.rs.swp  .main.rs.swp  at_client.rs  config.rs  main.rs  models.rs  templates.rs
static/: 404.html
static/css/: main.css
templates/: base_president.html  index.html  stats.html  vote.html
