[package]
name = "hot_or_not_prez"
version = "0.1.0"
authors = ["ClimaBot <ci-bot@climacell.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
askama = "0.9"
actix-files = "0.3"
actix-web = { version = "3", features = ["rustls"] }
envy = "0.4"
env_logger = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.3"
rustls = "0.17.0"
indexmap = "1.6.1"
actix-session = "0.4"

[build-dependencies]
askama = "0.9"
